--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
         </div>
 
         <div class="main-content">
-            <!-- API Key Section -->
+            <!-- Status Section -->
             <div class="api-key-section">
-                <h3>🔑 Konfigurasi API</h3>
-                <div class="input-group">
-                    <label for="apiKey">Google Gemini API Key:</label>
-                    <input type="password" id="apiKey" placeholder="Masukkan API Key Anda">
-                    <small>API Key akan disimpan secara lokal dan tidak dikirim ke server lain</small>
+                <h3>🔑 Status API</h3>
+                <div class="api-status">
+                    <span class="status-indicator">✅</span>
+                    <span>API Gemini siap digunakan</span>
                 </div>
             </div>
 
